Add Joe to default people list

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         "chris",
         "fiona",
         "tom",
+        "joe",
       ];
       const names = shuffle(
         peopleList?.length > 0 ? peopleList : defaultPeopleList
