add marco to default list

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         "fiona",
         "tom",
         "joe",
+        "marco"
       ];
       const names = shuffle(
         peopleList?.length > 0 ? peopleList : defaultPeopleList
