--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
         "tom",
         "joe",
         "marco",
-        "jonathan"
+        "jonathan",
+        "mihaela"
       ];
       const names = shuffle(
         peopleList?.length > 0 ? peopleList : defaultPeopleList
