update people list
- jon
+ dan
+ chris

--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
         "tom",
         "joe",
         "marco",
-        "jonathan",
-        "mihaela"
+        "dan",
+        "mihaela",
+        "chris"
       ];
       const names = shuffle(
         peopleList?.length > 0 ? peopleList : defaultPeopleList
