--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       const urlParams = new URLSearchParams(window.location.search);
       const peopleList = urlParams?.getAll("people")[0]?.split(",");
       const defaultPeopleList = [
-        "pal",
+        "ana",
         "miles",
         "michael",
         "alican",
